# mediator

./: .env.local.example  .gitignore  DEPLOYMENT.md  README.md  ROADMAP-IOS.md  ROADMAP.md  V0-IMPLEMENTATION-PLAN.md  package-lock.json  package.json  server.js  vercel.json
backend/: README.md  analysis_utilities.py  clients.py  database.py  main.py  prompts.py  pyproject.toml  transcripts.db  understanding_app.md
backend/audio_transcripts/: dear_man_role_play.json  dear_man_role_play.txt  dear_man_role_play_analysis.json
backend/data_pipelines/: __init__.py  ingest_audio_and_do_analysis.py
backend/scripts/: process_audio.py
backend/tests/: body.json  test_sentiment.py
docs/: PHASE2_ANALYTICS_BRIEF.md  V1_SYSTEMS_REFERENCE.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/demo/: page.tsx
src/app/landing/: page.tsx
src/app/observer/: page.tsx
src/components/admin/: AdminDashboard.tsx  SessionsTable.tsx  index.ts
src/components/analytics/: HealthScoreCard.tsx  (+5 more)
src/hooks/: index.ts  useAI.ts  useAdminDashboard.ts  useAuth.ts  useDeepgramTranscription.ts  useEmailReport.ts  useExport.ts  useSessionAnalytics.ts  useSileroVAD.ts  useSkillElementDetector.ts  useSocket.ts  useSpeechRecognition.ts  useTranscription.ts  useVoiceActivityDetection.ts  useVolumeMonitor.ts
src/lib/: ai.ts  analytics.ts  auditLog.ts  checkInTemplates.ts  dbtSkills.ts  deepgram.ts  demoData.ts  export.ts  pdfExport.ts  reportsApi.ts  socket.ts  supabase.ts
src/store/: analytics.ts  session.ts
src/types/: index.ts
supabase/: schema.sql
(+60 files in other folders)
