[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "textblob>=0.19.0",
    "uvicorn>=0.40.0",
    "vadersentiment>=3.3.2",
    "requests>=2.31.0",
    "assemblyai>=0.28.0",
    "youtube-to-audio>=0.1.7",
    "python-dotenv>=1.2.1",
]
